@@ -9,6 +9,7 @@ Changes in 2.8.24
 - More explicit Assignment Type deletion Prompt message in Assignments.php
 - Fix _delTree() function name typo in Modules.inc.php & Plugins.inc.php
 - Create ReferralLog functions for reuse in Discipline/includes/ReferralLog.fnc.php
+- Update PDFStart() & PDFStop() functions to enable Save PDF mode in PDF.php
 
 Changes in 2.8.23
 -----------------
